<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pacr_solutions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mouad.monkade2@etu.univ-lorraine.fr">monkade1u</maintainer>
  <license>TODO: License declaration</license>

  <depend>pacr_simulation</depend>
  <depend>pacr_interfaces</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
